--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,4 +26,12 @@
     <string name="Info_client">Client\'s information</string>
     <string name="Call">Call</string>
     <string name="Send_mail">Write email</string>
+    <string name="Delete_dialog_title">Are you sure?</string>
+    <string name="Delete_dialog_text">The selected elements will be deletes. Are you sure?</string>
+    <string name="Delete_dialog_text">The selected element will be deleted. Are you sure?</string>
+    <string name="Info_service">Service information</string>
+    <string name="Date">Date</string>
+    <string name="Client_vehicles">Client vehicles</string>
+    <string name="Info_vehicle">Vehicle information</string>
+    <string name="Vehicle_services">Vehicle services</string>
 </resources>
