--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -26,4 +26,11 @@
     <string name="Info_client">Bezeroaren informazioa</string>
     <string name="Call">Deitu</string>
     <string name="Send_mail">Korreoa idatzi</string>
+    <string name="Delete_dialog_title">Ziur zaude?</string>
+    <string name="Delete_dialog_text">Ziur zaude hautatuko elementua ezabatu nahi duzula?</string>
+    <string name="Info_service">Zerbitzuaren infromazioa</string>
+    <string name="Date">Data</string>
+    <string name="Client_vehicles">Bezeroaren ibilgailuak</string>
+    <string name="Info_vehicle">Ibilgailuaren informazioa</string>
+    <string name="Vehicle_services">Ibilgailuaren zerbitzuak</string>
 </resources>
