Changed some string values

--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -20,7 +20,7 @@
     <string name="Model">Modeloa</string>
     <string name="Client">Bezeroa</string>
     <string name="LanguageChoose">Aukeratu hizkuntza bat</string>
-    <string name="Basque_lang">Esukara</string>
+    <string name="Basque_lang">Euskara</string>
     <string name="Spanish_lang">Gaztelera</string>
     <string name="Engilsh_lang">Ingelesa</string>
     <string name="Info_client">Bezeroaren informazioa</string>
