--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -33,8 +33,8 @@
     <string name="Client_vehicles">Bezeroaren ibilgailuak</string>
     <string name="Info_vehicle">Ibilgailuaren informazioa</string>
     <string name="Vehicle_services">Ibilgailuaren zerbitzuak</string>
-    <string name="Notification_channel_name">Elementua sartuta</string>
-    <string name="Notification_channel_description">Kanal honek elementu berri bat sartzean agertzen diren jakinarazpenak kudeatzen ditu.</string>
+    <string name="Notification_channel_name">Fitxategia deskargatuta</string>
+    <string name="Notification_channel_description">Kanal honek fitxategi bat deskargatzean bidaltzen den notifikazioak kudeatzen ditu.</string>
     <string name="Notification_content">Fitxategia ondo gorde da Deskargetan</string>
     <string name="Notification_title">Fitxategia deskargatuta</string>
 </resources>
