--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="Client_vehicles">Vehiculos del cliente</string>
     <string name="Info_vehicle">Información del vehículo</string>
     <string name="Vehicle_services">Servicios del vehículo</string>
-    <string name="Notification_channel_name">Elemento añadido</string>
-    <string name="Notification_channel_description">Este canal administra las notificaciones que se muestran cada vez que se añade un nuevo elemento.</string>
+    <string name="Notification_channel_name">Archivo descargado</string>
+    <string name="Notification_channel_description">Este canal administra las notificaciones que se mandan cuando un archivo se descarga.</string>
     <string name="Notification_content">El archivo se ha descargado correctamente en Descargas</string>
     <string name="Notification_title">Archivo descargado</string>
 </resources>
