--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,7 +25,7 @@
     <string name="Engilsh_lang">Engilsh</string>
     <string name="Info_client">Client\'s information</string>
     <string name="Call">Call</string>
-    <string name="Send_mail">Write email</string>
+    <string name="Send_mail">Send</string>
     <string name="Delete_dialog_title">Are you sure?</string>
     <string name="Delete_dialog_text">The selected element will be deleted. Are you sure?</string>
     <string name="Info_service">Service information</string>
