--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -40,4 +40,5 @@
     <string name="Blue">Urdina</string>
     <string name="Green">Berdea</string>
     <string name="Purple">Morea</string>
+    <string name="Phone_too_long">Telefono zenbakia luzeegia da</string>
 </resources>
