--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="Blue">Azul</string>
     <string name="Green">Verde</string>
     <string name="Purple">Morado</string>
+    <string name="Phone_too_long">El número de teléfono es demasiado largo</string>
 </resources>
